# os_rust

./: Cargo.toml  Doxyfile  README.md
.cargo/: config  config.toml
html/: md_README.html  pages.html
html/search/: all_0.js  pages_0.js
latex/: md_README.tex  refman.tex
src/: Doxyfile  allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
test/: basic_boot.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
